<resources>
    <string name="open_sans_light_font" translatable="false">fonts/OpenSans-Light.ttf</string>
    <string name="open_sans_font" translatable="false">fonts/OpenSans-Regular.ttf</string>
    <string name="open_sans_bold_font" translatable="false">fonts/OpenSans-Bold.ttf</string>
    <string name="open_sans_semibold_font" translatable="false">fonts/OpenSans-Semibold.ttf</string>
    <string name="avenir_book_font" translatable="false">fonts/Avenir-Book.ttf</string>
    <string name="error_dialog_title">Error</string>
    <string name="warning_dialog_title">Information</string>
    <string name="loading_progress_message">Loading…</string>
    <string name="authorization_progress_message">Authorizing…</string>
    <string name="registration_progress_message">Registration…</string>
    <string name="no_network_connection_message">No Internet connection</string>
    <string name="try_again_string">Try again</string>
    <string name="sign_in_now_string">Sign In</string>
    <string name="sign_in_later_string">Later</string>
    <string name="access_denied_message">This operation is not available for not authorizing users!</string>
    <string name="company_added_to_favorites_message">The company added to favorites</string>
    <string name="company_not_added_to_favorites_message">The company has already added to favorites</string>
    <string name="company_removed_from_favorites_message">The company removed from favorites</string>
    <string name="company_not_removed_from_favorites_message">The company has already removed from favorites</string>
    <string name="undo_company_removed_message">UNDO</string>
    <string name="skip_view_string">Skip</string>
    <string name="email_hint_string">Enter email</string>
    <string name="password_hint_string">Enter password</string>
    <string name="sign_in_string">Sign In</string>
    <string name="or_string">or</string>
    <string name="sign_in_with_facebook_string">Sign in with Facebook</string>
    <string name="sign_in_with_google_string">Sign in with Google</string>
    <string name="dont_have_account_string">No account yet?</string>
    <string name="sign_up_label_string">Sign Up</string>
    <string name="name_hint_string">Enter name</string>
    <string name="confirm_password_hint_string">Confirm password</string>
    <string name="sign_up_string">Sign Up</string>
    <string name="have_account_string">Already have an account?</string>
    <string name="sign_in_label_string">Sign In</string>
    <string name="wrong_name_string">Please, enter correct name</string>
    <string name="wrong_email_string">Please, enter correct email</string>
    <string name="wrong_password_string">The password can not contains at least of 6 characters</string>
    <string name="wrong_password_confirmation_string">Password not confirmed</string>
    <plurals name="category_items_count_string">
        <item quantity="one">%d COMPANY</item>
        <item quantity="few">%d COMPANIES</item>
        <item quantity="other">%d COMPANIES</item>
        <item quantity="many">%d COMPANIES</item>
    </plurals>
    <string name="choose_city_string">Choose the city: </string>
    <string name="recently_watched_title">Recently watched</string>
    <string name="popular_title">Popular in %s</string>
    <string name="location_measure">km</string>
    <string name="navigation_drawer_open" translatable="false">Open</string>
    <string name="navigation_drawer_close" translatable="false">Close</string>
    <string name="main_item_title">Main</string>
    <string name="category_item_title">Categories</string>
    <string name="favorite_item_title">Favorites</string>
    <string name="recent_item_title">Recently watched</string>
    <string name="profile_item_title">Profile</string>
    <string name="logout_item_text">Sign out</string>
    <string name="sign_in_item_text">Sign in</string>
    <string name="privacy_item_text">Privacy policy</string>
    <string name="terms_item_text">Terms of use</string>
    <string name="news_item_text">News</string>
    <string name="costs_item_text">Costs</string>
    <string name="category_dialog_title">Choose category</string>
    <string name="button_category_dialog_cancel">CANCEL</string>
    <string name="filter_activity_title">Search</string>
    <string name="show_results_string">Show results</string>
    <string name="no_filters_result_string">No companies found</string>
    <string name="results_count_string">Results: %d</string>
    <string name="filters_example">[
    {
        "name" : "Search",
        "filter_field" : "name",
        "dialog" : null
    },
    {
        "name" : "Rating",
        "filter_field" : "rating",
        "dialog" : [
            {
                "key" : "1",
                "value" : "Awfully"
            },
            {
                "key" : "2",
                "value" : "Bad"
            },
            {
                "key" : "3",
                "value" : "Not bad"
            },
            {
                "key" : "4",
                "value" : "Good"
            },
            {
                "key" : "5",
                "value" : "Excellent"
            }
        ]
    },
    {
        "name" : "Price",
        "filter_field" : "price_rel",
        "dialog" : [
            {
                "key" : "1",
                "value" : "Cheap"
            },
            {
                "key" : "2",
                "value" : "Average"
            },
            {
                "key" : "3",
                "value" : "Expensive"
            },
            {
                "key" : "4",
                "value" : "Very&#160;expensive"
            }
        ]
    }
] </string>
    <string name="clear_filters_string">Clear all</string>
    <string name="sort_field_tag_id" translatable="false">field</string>
    <string name="sort_type_tag_id" translatable="false">type</string>
    <string name="sort_fragment_title">Sort type</string>
    <string name="sort_confirm_button_text">ACCEPT</string>
    <string name="sorting_example">[
    {
        "name" : "By&#160;rating",
        "sort_field" : "rating",
        "sort_type" : "desc"
    },
    {
        "name" : "From&#160;cheap&#160;to&#160;expensive",
        "sort_field" : "price_rel",
        "sort_type" : "asc"
    },
    {
        "name" : "From&#160;expensive&#160;to&#160;cheap",
        "sort_field" : "price_rel",
        "sort_type" : "desc"
    },
    {
        "name" : "Nearest",
        "sort_field" : "distance",
        "sort_type" : "asc"
    }

] </string>
    <plurals name="review_count_string">
        <item quantity="one">%d rating</item>
        <item quantity="few">%d ratings</item>
        <item quantity="many">%d ratings</item>
        <item quantity="other">%d ratings</item>
    </plurals>
    <string name="choose_company_phone">Choose number:</string>
    <string name="button_show_on_map_text">Show on map</string>
    <string name="work_time_text">Open until %s</string>
    <string name="payment_methods_text">Payment methods</string>
    <string name="button_cash_text">In cash</string>
    <string name="button_cashless_text">Exchange</string>
    <string name="button_open_navigator_text">Show in navigator</string>
    <string name="additional_services_title_text">Additional services</string>
    <string name="reviews_title_text">Ratings</string>
    <string name="vote_object_text">Tap for send rating</string>
    <string name="vote_object_title_text">Rate the object</string>
    <string name="button_all_reviews_text">Show all ratings</string>
    <string name="button_all_text_on">Less</string>
    <string name="button_all_text_off">More</string>
    <string name="error_vote_object">You have already rated this company!</string>
    <string name="all_review_title">All ratings</string>
    <string name="all_review_subtitle">total</string>
    <string-array name="rating_price_array">
        <item>Cheap</item>
        <item>Average</item>
        <item>Expansive</item>
        <item>Very expensive</item>
    </string-array>
    <string-array name="rating_array">
        <item>Awfully</item>
        <item>Bad</item>
        <item>Not bad</item>
        <item>Good</item>
        <item>Excellent</item>
    </string-array>
    <string name="send_string">Send</string>
    <string name="search_button_string">Repeat search</string>
    <string name="filter_button_string">Filters</string>
    <string name="transition_company_photo" translatable="false">transition_company_photo</string>
    <string name="transition_news_photo" translatable="false">transition_news_photo</string>
    <string name="transition_company_name" translatable="false">transition_company_name</string>
    <string name="transition_company_rating" translatable="false">transition_company_rating</string>
    <string name="news_tab_title_new">New</string>
    <string name="news_tab_title_popular">Popular</string>
    <string name="news_tab_title_favorites">Favorites</string>
    <string name="news_activity_text_view_news_rating">Good news?</string>
    <string name="news_activity_rating_button_yes">Yes</string>
    <string name="news_activity_rating_button_no">No</string>
    <string name="news_fragment_popular_title">Popular news</string>
    <string name="news_activity_popular_title">Popular</string>
    <plurals name="news_activity_popular_subtitle">
        <item quantity="one">за %d day</item>
        <item quantity="few">за %d days</item>
        <item quantity="many">за %d days</item>
        <item quantity="other">за %d days</item>
    </plurals>
    <string name="news_added_to_favorites_message">The news added to favorites</string>
    <string name="news_not_added_to_favorites_message">The news has already added to favorites</string>
    <string name="news_removed_from_favorites_message">The news removed from favorites</string>
    <string name="news_not_removed_from_favorites_message">The news has already removed from favorites</string>
    <string name="undo_news_removed_message">UNDO</string>
    <string name="update_rating_activity_text_view_rating_title">Ваша оценка</string>
    <string name="update_rating_activity_text_view_price_rating_title">Стоимость</string>
    <string name="update_rating_activity_text_view_your_rating">Оставьте ваш отзыв</string>
    <string name="update_rating_activity_filter_edit_text_name">ИМЯ</string>
    <string name="update_rating_activity_filter_edit_text_title">ЗАГОЛОВОК</string>
    <string name="update_rating_activity_filter_edit_text_review">ОТЗЫВ</string>
    <string name="save_string">Save</string>
    <string name="cost_detail_activity_filter_edit_text_date_hint">Дата</string>
    <string name="cost_detail_activity_filter_edit_text_fuel_type_hint">Бензин</string>
    <string name="cost_detail_activity_filter_edit_text_liters_hint">Заправлено</string>
    <string name="cost_detail_activity_filter_edit_text_service_name_hint">Наименование</string>
    <string name="cost_detail_activity_filter_edit_text_liter_price_hint">Цена за 1 л.</string>
    <string name="cost_detail_activity_filter_edit_text_price_hint">Цена</string>
    <string name="cost_detail_activity_filter_edit_text_comment_hint">Комментарий</string>
    <string name="cost_detail_activity_odometer_text">Текущий пробег</string>
    <string name="cost_details_date_wrong">Выберите дату</string>
    <string name="cost_details_fuel_type_wrong">Выберите топливо</string>
    <string name="cost_details_cost_name_wrong">Выберите вид затрат</string>
    <string name="cost_details_liters_wrong">Введите количество литров</string>
    <string name="cost_details_liter_price_wrong">Введите цену за литр</string>
    <string name="cost_details_price_wrong">Введите цену</string>
    <string name="cost_details_service_name_wrong">Введите название ремонта</string>
</resources>