<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              style="@style/LinearLayout.Vertical"
              android:background="#fff"
              android:focusable="true"
              android:focusableInTouchMode="true"
              tools:context="net.ginteam.carmen.kotlin.view.activity.costs.BaseCostDetailsActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
        style="@style/ScrollView.Base"
        android:paddingEnd="@dimen/costs_details_activity_horizontal_margin"
        android:paddingStart="@dimen/costs_details_activity_horizontal_margin">

        <LinearLayout style="@style/LinearLayout.Vertical">

            <net.ginteam.carmen.view.custom.FilterEditText
                android:id="@+id/filter_edit_text_date"
                style="@style/EditText.WrappedHeight"
                android:layout_marginTop="@dimen/costs_details_activity_edit_text_date_margin_top"
                app:filterHint="@string/cost_detail_activity_filter_edit_text_date_hint"
                app:imageEmptyText="@drawable/ic_calendar_white"
                app:imageFilledText="@drawable/ic_calendar_white"/>

            <LinearLayout
                style="@style/LinearLayout.WrappedHeight.Horizontal"
                android:layout_marginBottom="@dimen/costs_details_activity_odometer_text_margin_bottom"
                android:layout_marginTop="@dimen/costs_details_activity_odometer_text_margin_top">

                <ImageView
                    style="@style/ImageView.Wrapped"
                    android:src="@drawable/ic_timer_white"/>

                <TextView
                    style="@style/TextView.Wrapped.OpenSans"
                    android:layout_marginStart="@dimen/costs_details_activity_odometer_text_margin_start"
                    android:text="@string/cost_detail_activity_odometer_text"
                    android:textSize="@dimen/costs_details_activity_odometer_text_size"/>

            </LinearLayout>

            <include layout="@layout/odometer"/>

            <LinearLayout
                style="@style/LinearLayout.Horizontal"
                android:layout_marginTop="@dimen/costs_details_activity_filter_edit_text_liters_margin_top"
                android:paddingEnd="@dimen/costs_details_activity_filter_edit_text_liters_margin_end">

                <net.ginteam.carmen.view.custom.FilterEditText
                    android:id="@+id/filter_edit_text_price"
                    style="@style/EditText.WrappedHeight"
                    android:layout_weight="1.4"
                    app:filterHint="@string/cost_detail_activity_filter_edit_text_price_hint"
                    app:imageClearTextVisibility="false"
                    app:imageEmptyText="@drawable/ic_coins_white"
                    app:imageFilledText="@drawable/ic_coins_white"/>

                <net.ginteam.carmen.view.custom.FilterEditText
                    android:id="@+id/filter_edit_text_6"
                    style="@style/EditText.WrappedHeight"
                    android:layout_weight="1.6"
                    android:visibility="invisible"/>

            </LinearLayout>

            <net.ginteam.carmen.view.custom.FilterEditText
                android:id="@+id/filter_edit_text_comment"
                style="@style/EditText.WrappedHeight"
                android:layout_marginTop="@dimen/costs_details_activity_filter_edit_text_comment_margin_top"
                app:filterHint="@string/cost_detail_activity_filter_edit_text_comment_hint"
                app:imageEmptyText="@drawable/ic_comment_white"
                app:imageFilledText="@drawable/ic_comment_white"
                android:layout_marginBottom="@dimen/costs_details_activity_padding_bottom"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
