<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ConstraintLayout.Base"
    tools:context="net.ginteam.carmen.kotlin.view.activity.MainActivity">

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:background="@color/colorWhite"
        android:paddingBottom="@dimen/category_dialog_title_padding_vertical"
        android:paddingTop="@dimen/category_dialog_title_padding_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view_category_dialog_title"
            style="@style/TextView.DialogTitle"
            android:text="@string/sort_fragment_title"
            android:layout_marginTop="0dp"            />

    </LinearLayout>


    <ScrollView
        style="@style/ScrollView.WrappedHeight"
        app:layout_constraintBottom_toTopOf="@+id/layout_buttons"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_title"
        app:layout_constraintVertical_bias="0.0">

        <RadioGroup
            android:id="@+id/radio_group_sorting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f3f3f3"
            android:paddingStart="@dimen/sort_item_margin"
            android:paddingBottom="@dimen/sort_item_margin">
        </RadioGroup>

    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/button_confirm_sort"
            style="@style/TextView.DialogButton"
            android:text="@string/sort_confirm_button_text"/>

        <TextView
            android:id="@+id/button_sorting_dialog_cancel"
            style="@style/TextView.DialogButton"
            android:text="@string/button_category_dialog_cancel"/>

    </LinearLayout>

    <include layout="@layout/progress_bar"
            style="@style/Include.Base"/>

</android.support.constraint.ConstraintLayout>