<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayout.Sign"
    tools:context="net.ginteam.carmen.view.activity.auth.SignInActivity"
    tools:ignore="MissingPrefix">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/layout_auth_toolbar"
                layout="@layout/auth_toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/image_view_logo"
                style="@style/ImageView.Wrapped.Logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_auth_toolbar"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                style="@style/TextInputLayout.Email"
                android:layout_marginTop="@dimen/logo_bottom_space"
                android:hint="@string/name_hint_string"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view_logo">

                <EditText
                    android:id="@+id/edit_text_name"
                    style="@style/EditText.Email"/>

            </android.support.design.widget.TextInputLayout>

            <View
                style="@style/TextInputLayout.Divider"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_name"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                style="@style/TextInputLayout.Email"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_name">

                <EditText
                    android:id="@+id/edit_text_email"
                    style="@style/EditText.Email"/>

            </android.support.design.widget.TextInputLayout>

            <View
                style="@style/TextInputLayout.Divider"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_email"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                style="@style/TextInputLayout.Password"
                android:layout_marginTop="@dimen/email_field_bottom_space"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_email">

                <EditText
                    android:id="@+id/edit_text_password"
                    style="@style/EditText.Password"/>

            </android.support.design.widget.TextInputLayout>

            <View
                style="@style/TextInputLayout.Divider"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_password"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_confirm_password"
                style="@style/TextInputLayout.Password"
                android:layout_marginTop="@dimen/email_field_bottom_space"
                android:hint="@string/confirm_password_hint_string"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_password">

                <EditText
                    android:id="@+id/edit_text_confirm_password"
                    style="@style/EditText.Password"/>

            </android.support.design.widget.TextInputLayout>

            <View
                style="@style/TextInputLayout.Divider"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_confirm_password"/>

            <Button
                android:id="@+id/button_sign_up"
                style="@style/Button.SignIn"
                android:layout_marginTop="@dimen/password_field_bottom_space"
                android:text="@string/sign_up_string"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_confirm_password"/>

            <TextView
                android:id="@+id/text_view_have_account"
                style="@style/TextView.SignMessage"
                android:layout_marginBottom="@dimen/sign_up_bottom_space"
                android:layout_marginTop="@dimen/sign_in_google_bottom_space"
                android:text="@string/have_account_string"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_sign_up"/>

            <TextView
                android:id="@+id/text_view_sign_in"
                style="@style/TextView.SignAction"
                android:layout_marginStart="@dimen/sign_up_left_space"
                android:text="@string/sign_in_label_string"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_view_have_account"
                app:layout_constraintLeft_toRightOf="@+id/text_view_have_account"/>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/progress_bar"/>

</LinearLayout>
