<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LinearLayout.Vertical">

    <include layout="@layout/toolbar"/>

    <ScrollView
        style="@style/ScrollView.Base">

        <android.support.constraint.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            style="@style/ConstraintLayout.WrappedHeight"
            tools:context="net.ginteam.carmen.view.activity.VoteObjectActivity"
            tools:ignore="MissingPrefix">

            <TextView
                android:id="@+id/text_view_rating_title"
                style="@style/TextView.DetailHeader"
                android:layout_marginTop="@dimen/text_view_rating_title_margin_top"
                android:text="@string/update_rating_activity_text_view_rating_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/text_view_rating"
                style="@style/TextView.DetailHeader"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/text_view_rating_margin_top"
                tools:text="Ай молодець!"
                android:textColor="@color/colorGreen"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_rating_title"/>

            <net.ginteam.carmen.view.custom.rating.CarmenRatingView
                android:id="@+id/rating_view_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rating_view_company_margin_top"
                android:stepSize="1"
                app:crv_emptyDrawable="@drawable/ic_large_empty_new_rating"
                app:crv_fillDrawable="@drawable/ic_large_fill_new_rating"
                app:crv_indicatorSpacing="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_rating"/>

            <View
                android:id="@+id/view3"
                style="@style/LayoutDivider"
                android:layout_marginTop="@dimen/update_rating_activity_separator_margin_top"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_view_company"/>

            <TextView
                android:id="@+id/text_view_price_rating_title"
                style="@style/TextView.Header"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/update_rating_activity_margin_side"
                android:layout_marginTop="@dimen/text_view_price_rating_title_margin_top"
                android:text="@string/update_rating_activity_text_view_price_rating_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3"/>

            <TextView
                android:id="@+id/text_view_price_rating"
                style="@style/TextView.Header"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/update_rating_activity_margin_side"
                android:layout_marginTop="1dp"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_price_rating_title"/>

            <net.ginteam.carmen.view.custom.rating.CarmenRatingView
                android:id="@+id/rating_view_company_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/update_rating_activity_margin_side"
                android:layout_marginTop="@dimen/text_view_price_rating_title_margin_top"
                android:numStars="4"
                android:stepSize="1"
                app:crv_emptyDrawable="@drawable/ic_medium_price_empty_rating"
                app:crv_fillDrawable="@drawable/ic_medium_price_fill_rating"
                app:crv_indicatorSpacing="10dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3"/>

            <View
                android:id="@+id/view4"
                style="@style/LayoutDivider"
                android:layout_marginTop="@dimen/update_rating_activity_separator_margin_top"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_price_rating"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                style="@style/RecyclerView.WrappedHeight"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4"/>

            <TextView
                android:id="@+id/text_view_your_rating"
                style="@style/TextView.DetailHeader"
                android:layout_marginTop="@dimen/text_view_your_rating_margin_top"
                android:text="@string/update_rating_activity_text_view_your_rating"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView"/>

            <net.ginteam.carmen.view.custom.FilterEditText
                android:id="@+id/filter_edit_text_name"
                style="@style/EditText.Review"
                app:filterHint="@string/update_rating_activity_filter_edit_text_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_your_rating"/>

            <net.ginteam.carmen.view.custom.FilterEditText
                android:id="@+id/filter_edit_text_title"
                style="@style/EditText.Review"
                app:filterHint="@string/update_rating_activity_filter_edit_text_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filter_edit_text_name"/>

            <net.ginteam.carmen.view.custom.FilterEditText
                android:id="@+id/filter_edit_text_review"
                style="@style/EditText.Review"
                app:filterHint="@string/update_rating_activity_filter_edit_text_review"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filter_edit_text_title"/>

            <Button
                android:id="@+id/button_send"
                style="@style/Button.SendReview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filter_edit_text_review"/>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</LinearLayout>


